feat: 提供项目附件预览内容接口
